Added mock for test functionality and implemented method in puppeteer service for switch between actions
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3333
-SCHEDULE=complete
+SCHEDULE=COMPLETE
 ACTIVE=true
-BASE_URL=localhost:3000
+BASE_URL=http://localhost:3334
 USERNAME=root
 PASSWORD=password
+TIMEOUT=20
