--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/schedule": "^0.4.3",
+    "@types/luxon": "^1.26.2",
+    "luxon": "^1.26.0",
     "nest-puppeteer": "^1.1.1",
     "puppeteer": "^8.0.0",
     "reflect-metadata": "^0.1.13",
