--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@ PORT=3333
 SCHEDULE=COMPLETE
 ACTIVE=true
 BASE_URL=http://localhost:3334
-USERNAME=root
-PASSWORD=password
-TIMEOUT=20
+USERNAME=test@test.com
+PASSWORD=ce203189c89096877b9f1dd088f063ab
+USER_ID=MY_NAME_COMPLETE
+TIMEOUT=2000
+CRYPTO_ALGORITHM=aes-256-cbc
+CRYPTO_IV=8s6yNFA8NHEDYZsD
+CRYPTO_PASSWORD=dzjU8dUBg5ws7L9yGvPWYrDUXVEpgPaqJAMm
