Added functionality for get calendar for check if it is holiday
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 PORT=3333
 SCHEDULE=COMPLETE
 ACTIVE=true
-BASE_URL=http://localhost:3334
+DOMAIN=.test.com
+BASE_URL=http://localhost.test.com:3334
+LOGIN_PATH=/login
+LIST_PATH=/leaves/month/
 USERNAME=test@test.com
 PASSWORD=ce203189c89096877b9f1dd088f063ab
 USER_ID=MY_NAME_COMPLETE
