Mocking responses and cookies for test
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ TIMEOUT=2000
 CRYPTO_ALGORITHM=aes-256-cbc
 CRYPTO_IV=8s6yNFA8NHEDYZsD
 CRYPTO_PASSWORD=dzjU8dUBg5ws7L9yGvPWYrDUXVEpgPaqJAMm
+NODE_ENV=test
