--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/schedule": "^0.4.3",
     "@types/luxon": "^1.26.2",
+    "discord.js": "^12.5.1",
     "luxon": "^1.26.0",
     "nest-puppeteer": "^1.1.1",
     "puppeteer": "^8.0.0",
