--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ CRYPTO_ALGORITHM=aes-256-cbc
 CRYPTO_IV=8s6yNFA8NHEDYZsD
 CRYPTO_PASSWORD=dzjU8dUBg5ws7L9yGvPWYrDUXVEpgPaqJAMm
 NODE_ENV=test
+DEFAULT_CHANNEL=discord
 DISCORD_ID=823258494592745555
 DISCORD_TOKEN=kMiYRjPGajT650CcMFTpXYiMMg-7uufJyZWuaCE2dBMnqeSArTg5IvsmnFVRy2KMkd46
