Added Error handler and test notification of error
Signed-off-by: Noe CR <noecr.dev@gmail.com>

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ NODE_ENV=test
 DEFAULT_CHANNEL=discord
 DISCORD_ID=823258494592745555
 DISCORD_TOKEN=kMiYRjPGajT650CcMFTpXYiMMg-7uufJyZWuaCE2dBMnqeSArTg5IvsmnFVRy2KMkd46
+DISCORD_GROUP_ID=824186485807775786
+BASE_REPOSITORY_URL=https://github.com/NoeCR/signin-nestjs
