--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signin",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "",
   "author": "",
   "private": true,
@@ -26,14 +26,17 @@
     "@nestjs/core": "^7.6.13",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/schedule": "^0.4.3",
+    "@nestjs/swagger": "^4.8.0",
     "@types/luxon": "^1.26.2",
+    "class-validator": "^0.13.1",
     "discord.js": "^12.5.1",
     "luxon": "^1.26.0",
     "nest-puppeteer": "^1.1.1",
     "puppeteer": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
