--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "discord.js": "^12.5.1",
     "luxon": "^1.26.0",
     "nest-puppeteer": "^1.1.1",
+    "nest-winston": "^1.4.0",
     "puppeteer": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston-elasticsearch": "^0.15.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.6",
